--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "typescript": "^4.7.0"
+    "react-swipeable": "^7.0.0",
+    "swr": "^2.0.4",
+    "typescript": "^4.7.0",
+    "vcc-ui": "^3.15.0"
   },
   "scripts": {
     "dev": "next dev",
